--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,27 @@
-# This is a basic workflow to help you get started with Actions
+#!/bin/bash
 
-name: CI
+# غيّر USERNAME باسم حسابك في GitHub
+USERNAME="nawahtkui"
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+REPORT="repos_status_report.txt"
+echo "تقرير جاهزية المستودعات - $(date)" > $REPORT
+echo "-------------------------------------" >> $REPORT
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+gh repo list $USERNAME --limit 100 --json name,url | jq -r '.[] | "\(.name) \(.url)"' | while read repo url; do
+    echo "جارٍ فحص: $repo ..."
+    TEMP_DIR=$(mktemp -d)
+    git clone --depth 1 "$url" "$TEMP_DIR" > /dev/null 2>&1
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    STATUS="❌ غير جاهز"
+    if [ -f "$TEMP_DIR/index.html" ] || [ -d "$TEMP_DIR/src" ]; then
+        STATUS="⚠ يحتاج تعديل"
+    fi
+    if [ -f "$TEMP_DIR/index.html" ] && [ -d "$TEMP_DIR/src" ]; then
+        STATUS="✅ جاهز للنشر"
+    fi
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+    echo "$repo - $STATUS" >> $REPORT
+    rm -rf "$TEMP_DIR"
+done
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+echo "تم إنشاء التقرير في $REPORT"
